--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/8747addebe.js"
       crossorigin="anonymous"
@@ -24,7 +30,7 @@
           <div class="d-flex align-items-center gap-3">
             <img src="./assets/netflixLogo.svg" alt="Logo da Netflix" />
             <p class="border-logo">&nbsp;</p>
-            <span>Friday July 8th</span>
+            <span class="description-header">Friday July 8th</span>
           </div>
           <form class="d-flex align-items-center gap-5">
             <input
@@ -53,9 +59,7 @@
         <p class="border-container">&nbsp;</p>
         <p class="m-3">Supernatural</p>
       </div>
-      <div class="title container-fluid d-row text-white m-1">
-        Stranger Things
-      </div>
+      <p class="title container-fluid d-row text-white m-1">Stranger Things</p>
       <div class="container-fluid d-flex gap-2 text-white">
         <p>2019</p>
         <p class="border-title">&nbsp;</p>
@@ -77,6 +81,68 @@
         src="/assets/stars.svg"
         alt="Imagem de Estrelas De Classificação"
       />
+      <div class="d-flex gap-5">
+        <button class="btn-stream">
+          STREAW NOW <i class="fa-solid fa-circle-play"></i>
+        </button>
+        <button class="btn-all-ep">ALL EPISODES</button>
+      </div>
+      <div class="titleCard">
+        <p>POPULAR THIS WEEK</p>
+        <div class="btn-card">
+          <i class="fa-solid fa-circle-chevron-left"></i>
+          <i class="fa-solid fa-circle-chevron-right"></i>
+        </div>
+      </div>
+      <section class="d-row">
+        <div class="cards">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="/assets/card1.svg"
+              alt="Imagem de capa do card"
+            />
+          </div>
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="/assets/card2.svg"
+              alt="Imagem de capa do card"
+            />
+          </div>
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="/assets/card3.svg"
+              alt="Imagem de capa do card"
+            />
+          </div>
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="/assets/card4.svg"
+              alt="Imagem de capa do card"
+            />
+          </div>
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="/assets/card5.svg"
+              alt="Imagem de capa do card"
+            />
+          </div>
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="/assets/card6.svg"
+              alt="Imagem de capa do card"
+            />
+          </div>
+        </div>
+        <div class="retangulo">
+          <div class="parte-verde">16 +</div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
